--- a/bdcoe_website/src/Footer.css
+++ b/bdcoe_website/src/Footer.css
@@ -8,11 +8,14 @@
 }
 
 .content{
-    font-size: 37px;
+    font-size: 30px;
     font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    padding: 50px;
 }
 .content>h1{
-    font-size: 52px;
+    font-size: 48px;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     margin-bottom: 0;
 }
@@ -24,31 +27,53 @@
     display:flex;
     list-style: none;
     justify-content: space-between;
+    padding-right: 20px;
 }
 .menu>ul>li{
     font-size: 36px;
     font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .social>ul{
     display:flex;
     list-style: none;
     justify-content: space-evenly;
+    padding-top: 20px;
 }
 
 .mapouter{
     position:relative;
     text-align:right;
-    width:100%;
+    width:85%;
     height:400px;
+    padding: 50px;
 }    
 .gmap_canvas {
     overflow:hidden;
     background:none!important;
-    width:100%;
+    width:95%;
     height:400px;
+    border-radius: 10px;
+    box-shadow: 3px 5px 10px;
 }
 .gmap_iframe {
     height:400px!important;
 }
 
+.fa-linkedin{
+    color: #0A66C2;
+}
+.fa-youtube{
+    color: 	#FF0000;
+}
+.fa-instagram{
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    -webkit-background-clip: text;
+            /* Also define standard property for compatibility */
+            background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.fa-brands{
+    font-size: 2.5em;
+}
